--- a/node6/Dockerfile
+++ b/node6/Dockerfile
@@ -8,6 +8,8 @@ RUN apk add --update --no-cache git ca-certificates\
 	&& apk --update add --no-cache openssl openssh bash \
     && rm -rf /tmp/* /var/cache/apk/*
 
+RUN npm -g install pm2
+
 RUN mkdir -p /app
 VOLUME /app
 WORKDIR /app
